--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
       <!-- main content -->
       <div class="ip-main">
-        <h2>Hi, I'm Feitai, Welcome to My Home Page</h2>
+        <h2>Welcome to My Home Page</h2>
 <!--         <form action="http://list.qq.com/cgi-bin/qf_compose_send" target="_blank" method="post">
 <input type="hidden" name="t" value="qf_booked_feedback" />
 <input type="hidden" name="id" vlaue="3105746ef562384a0ffbc67926fa2810b331ea5d6a5eb435" />
