--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>hello,feitai</title>
+    <title>一只奔腾的小马</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/demo.css" />
-    <link rel="stylesheet" type="text/css" href="css/effect2.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/custom.css" />
     <script src="js/modernizr.custom.js"></script>
   </head>
   <body>
@@ -296,7 +296,7 @@
       <!-- main content -->
       <div class="ip-main">
         <div class="bar">
-          <h2>Welcome to here!</h2>
+          <h2>Welcome to my hood!</h2>
         </div>
         
 <!--         <form action="http://list.qq.com/cgi-bin/qf_compose_send" target="_blank" method="post">
@@ -307,6 +307,9 @@
       </div>
     </div><!-- /container -->
     <script src="js/classie.js"></script>
+    <div style="display:none;">
+      <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1255937032'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1255937032' type='text/javascript'%3E%3C/script%3E"));</script>
+    </div>
   </body>
 </html>
 
