--- a/index.html
+++ b/index.html
@@ -298,12 +298,7 @@
         <div class="bar">
           <h2>Welcome to my hood!</h2>
         </div>
-        
-<!--         <form action="http://list.qq.com/cgi-bin/qf_compose_send" target="_blank" method="post">
-<input type="hidden" name="t" value="qf_booked_feedback" />
-<input type="hidden" name="id" vlaue="3105746ef562384a0ffbc67926fa2810b331ea5d6a5eb435" />
-<input type="text" id="to" name="to" value="" placeholder="输入你的邮箱" />
-<input type="submit" value="订阅" /></form> -->
+        <h3>未完待续···</h3>
       </div>
     </div><!-- /container -->
     <script src="js/classie.js"></script>
