--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="bar">
           <h2>Welcome to my hood!</h2>
         </div>
-        <h3>未完待续···</h3>
+        <h3>Coming soon···</h3>
       </div>
     </div><!-- /container -->
     <script src="js/classie.js"></script>
