--- a/index.html
+++ b/index.html
@@ -302,9 +302,14 @@
       </div>
     </div><!-- /container -->
     <script src="js/classie.js"></script>
-    <div style="display:none;">
-      <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1255937032'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1255937032' type='text/javascript'%3E%3C/script%3E"));</script>
-    </div>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-46263481-3', 'auto');
+  ga('send', 'pageview');
+</script>
   </body>
 </html>
 
