--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="ip-container" class="ip-container">
       <!-- initial header -->
-      <header class="ip-header">
+ <!--      <header class="ip-header">
         <h1 class="ip-logo">
           <svg  viewBox="0 0 950 700"  class="ip-inner" width="100%" height="100%" preserveAspectRatio="xMidYMin meet" aria-labelledby="logo_title">
             <g id="socle">
@@ -290,7 +290,7 @@
             <path id="ip-loader-circle" class="ip-loader-circle" d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
           </svg>
         </div>
-      </header>
+      </header> -->
       <!-- top bar -->
 
       <!-- main content -->
@@ -301,14 +301,16 @@
         <h3>Coming soon···</h3>
       </div>
     </div><!-- /container -->
-    <script src="js/classie.js"></script>
-    <script>
+    <!--<script src="js/classie.js"></script>-->
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
   ga('create', 'UA-46263481-3', 'auto');
   ga('send', 'pageview');
+
 </script>
   </body>
 </html>
